# RayTracer---Advanced-3D-Rendering-Engine

./: .gitignore  CMakeLists.txt  README.md  clean_and_fix_config.ps1  create_test_config.ps1  fclean.sh  fix_libconfig.ps1  fix_root_config.ps1
.github/workflows/: ci-cd.yml
Scenes/: Cylinder.cfg  Toulouse.cfg  Toulouse_02.cfg  basic_scene.cfg  basic_scene_plane_cone.cfg  basic_scene_plane_sphere.cfg  direction_light.cfg  dna4_2.cfg  drop_shadow.cfg  triangle.cfg
src/: CMakeLists.txt
src/Plugins/: CMakeLists.txt
src/Plugins/Cone/: CMakeLists.txt  Cone.cpp  Cone.hpp
src/Plugins/Cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
src/Plugins/DirectionalLight/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp
src/Plugins/PerspectiveCamera/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/Plugins/Plane/: CMakeLists.txt  Plane.cpp  Plane.hpp
src/Plugins/PlaneMaterial/: CMakeLists.txt  PlaneMaterial.cpp  PlaneMaterial.hpp
src/Plugins/PointLight/: CMakeLists.txt  PointLight.cpp  PointLight.hpp
src/Plugins/SimpleMaterial/: CMakeLists.txt  SimpleMaterial.cpp  SimpleMaterial.hpp
src/Plugins/SimpleSkybox/: CMakeLists.txt  Skybox.cpp  Skybox.hpp
src/Plugins/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
src/Plugins/Triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp
src/libs/: CMakeLists.txt
tests/ExceptionTest/: ExceptionTest.cpp  execTest.sh
